[RW-1289][risk=no] Fix z-index loading screen rendering problems (#1217)

--- a/ui/src/app/views/signed-in/component.css
+++ b/ui/src/app/views/signed-in/component.css
@@ -107,6 +107,8 @@
   padding-right: 0.6rem;
   padding-left: 1rem;
   flex-grow: 1;
+  /* Needed for absolute positioned child elements, e.g. spinner. */
+  position: relative;
 }
 
 button.btn:focus {
